# octoph

./: .cproject  .project  CMakeLists.txt  build_gcc.sh  build_octoph.sh
octoph/: ndim.hpp  octoph.hpp  svec.hpp
octoph/basis/: basis.hpp  legendre.hpp
octoph/cell/: cell_client.hpp  cell_directory.hpp  cell_location.hpp  cell_server.hpp
octoph/containers/: containers.hpp
octoph/exception/: exception.hpp
octoph/math/: containers.hpp  math.hpp  multiindex.hpp  number.hpp  polynomial.hpp  tensor.hpp
octoph/math/basis/: basis.hpp  legendre.hpp
octoph/math/matrix/: QR.hpp  add.hpp  characteristic.hpp  column.hpp  comatrix.hpp  determinant.hpp  inverse.hpp  mask.hpp  matrix.hpp  neg.hpp  product.hpp  transpose.hpp
octoph/matrix/: QR.hpp  add.hpp  column.hpp  comatrix.hpp  determinant.hpp  inverse.hpp  mask.hpp  matrix.hpp  product.hpp  transpose.hpp
src/: main.cpp
src/basis/: a.out  basis.cpp  legendre.cpp
src/cell/: cell_client.cpp  cell_directory.cpp  cell_location.cpp  cell_server.cpp
src/exception/: exception.cpp
src/math/: math.cpp  tensor.cpp
src/math/basis/: basis.cpp  legendre.cpp
src/math/matrix/: matrix.cpp
src/matrix/: matrix.cpp
